--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,6 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:layout_centerHorizontal="true"
+    android:background="@color/colorBackground"
     android:orientation="vertical"
     app:layout_gravity="center"
     tools:context=".MainActivity">
@@ -23,6 +24,7 @@
             android:layout_height="100dp"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
+            android:textSize="70sp"
             app:layout_column="0"
             app:layout_row="0"
             tools:textColor="@color/colorPrimaryDark" />
@@ -33,6 +35,7 @@
             android:layout_height="100dp"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
+            android:textSize="70sp"
             app:layout_column="1"
             app:layout_row="0" />
 
@@ -42,6 +45,7 @@
             android:layout_height="100dp"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
+            android:textSize="70sp"
             app:layout_column="2"
             app:layout_row="0" />
 
@@ -51,6 +55,7 @@
             android:layout_height="100dp"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
+            android:textSize="70sp"
             app:layout_column="0"
             app:layout_row="1" />
 
@@ -60,6 +65,7 @@
             android:layout_height="100dp"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
+            android:textSize="70sp"
             app:layout_column="1"
             app:layout_row="1" />
 
@@ -69,6 +75,7 @@
             android:layout_height="100dp"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
+            android:textSize="70sp"
             app:layout_column="2"
             app:layout_row="1" />
 
@@ -78,6 +85,7 @@
             android:layout_height="100dp"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
+            android:textSize="70sp"
             app:layout_column="0"
             app:layout_row="2" />
 
@@ -87,6 +95,7 @@
             android:layout_height="100dp"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
+            android:textSize="70sp"
             app:layout_column="1"
             app:layout_row="2" />
 
@@ -96,20 +105,11 @@
             android:layout_height="100dp"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
+            android:textSize="70sp"
             app:layout_column="2"
             app:layout_row="2" />
 
     </android.support.v7.widget.GridLayout>
-
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:text="test"
-        android:visibility="visible" />
 
     <TextView
         android:id="@+id/turn"
@@ -118,6 +118,18 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="Turn: Player X" />
+        android:text="Player X, you may start!"
+        android:textColor="@color/colorPrimaryDark"
+        android:textSize="25sp" />
+
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center"
+        android:layout_weight="1"
+        android:gravity="center"
+        android:textColor="@color/colorAccent"
+        android:visibility="visible" />
 
 </LinearLayout>
