Playing against computer (random)

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -22,6 +22,7 @@
             android:id="@+id/tile01"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@null"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
             android:textSize="70sp"
@@ -33,6 +34,7 @@
             android:id="@+id/tile02"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@null"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
             android:textSize="70sp"
@@ -43,6 +45,7 @@
             android:id="@+id/tile03"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@null"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
             android:textSize="70sp"
@@ -53,6 +56,7 @@
             android:id="@+id/tile04"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@null"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
             android:textSize="70sp"
@@ -63,6 +67,7 @@
             android:id="@+id/tile05"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@null"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
             android:textSize="70sp"
@@ -73,6 +78,7 @@
             android:id="@+id/tile06"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@null"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
             android:textSize="70sp"
@@ -83,6 +89,7 @@
             android:id="@+id/tile07"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@null"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
             android:textSize="70sp"
@@ -93,6 +100,7 @@
             android:id="@+id/tile08"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@null"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
             android:textSize="70sp"
@@ -103,6 +111,7 @@
             android:id="@+id/tile09"
             android:layout_width="100dp"
             android:layout_height="100dp"
+            android:background="@null"
             android:onClick="tileClicked"
             android:textColor="@color/colorAccent"
             android:textSize="70sp"
