--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -10,115 +10,146 @@
     app:layout_gravity="center"
     tools:context=".MainActivity">
 
-    <android.support.v7.widget.GridLayout
+    <android.support.constraint.ConstraintLayout
         android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_vertical|center_horizontal"
+        android:layout_weight="1"
+        android:padding="10dp">
+
+        <ImageView
+            android:id="@+id/gridImage"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:layout_weight="1"
+            app:layout_constraintBottom_toBottomOf="@+id/gridLayout"
+            app:layout_constraintEnd_toEndOf="@+id/gridLayout"
+            app:layout_constraintStart_toStartOf="@+id/gridLayout"
+            app:layout_constraintTop_toTopOf="@+id/gridLayout"
+            app:srcCompat="@drawable/rect4202" />
+
+        <android.support.v7.widget.GridLayout
+            android:id="@+id/gridLayout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            app:columnCount="3"
+            app:rowCount="3"
+            tools:layout_editor_absoluteX="42dp"
+            tools:layout_editor_absoluteY="97dp">
+
+            <Button
+                android:id="@+id/tile01"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@null"
+                android:onClick="tileClicked"
+                android:textColor="@color/colorAccent"
+                android:textSize="70sp"
+                app:layout_column="0"
+                app:layout_row="0"
+                tools:textColor="@color/colorPrimaryDark" />
+
+            <Button
+                android:id="@+id/tile02"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@null"
+                android:onClick="tileClicked"
+                android:textColor="@color/colorAccent"
+                android:textSize="70sp"
+                app:layout_column="1"
+                app:layout_row="0" />
+
+            <Button
+                android:id="@+id/tile03"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@null"
+                android:onClick="tileClicked"
+                android:textColor="@color/colorAccent"
+                android:textSize="70sp"
+                app:layout_column="2"
+                app:layout_row="0" />
+
+            <Button
+                android:id="@+id/tile04"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@null"
+                android:onClick="tileClicked"
+                android:textColor="@color/colorAccent"
+                android:textSize="70sp"
+                app:layout_column="0"
+                app:layout_row="1" />
+
+            <Button
+                android:id="@+id/tile05"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@null"
+                android:onClick="tileClicked"
+                android:textColor="@color/colorAccent"
+                android:textSize="70sp"
+                app:layout_column="1"
+                app:layout_row="1" />
+
+            <Button
+                android:id="@+id/tile06"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@null"
+                android:onClick="tileClicked"
+                android:textColor="@color/colorAccent"
+                android:textSize="70sp"
+                app:layout_column="2"
+                app:layout_row="1" />
+
+            <Button
+                android:id="@+id/tile07"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@null"
+                android:onClick="tileClicked"
+                android:textColor="@color/colorAccent"
+                android:textSize="70sp"
+                app:layout_column="0"
+                app:layout_row="2" />
+
+            <Button
+                android:id="@+id/tile08"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@null"
+                android:onClick="tileClicked"
+                android:textColor="@color/colorAccent"
+                android:textSize="70sp"
+                app:layout_column="1"
+                app:layout_row="2" />
+
+            <Button
+                android:id="@+id/tile09"
+                android:layout_width="100dp"
+                android:layout_height="100dp"
+                android:background="@null"
+                android:onClick="tileClicked"
+                android:textColor="@color/colorAccent"
+                android:textSize="70sp"
+                app:layout_column="2"
+                app:layout_row="2" />
+
+        </android.support.v7.widget.GridLayout>
+    </android.support.constraint.ConstraintLayout>
+
+    <TextView
+        android:id="@+id/message"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_weight="1"
-        app:columnCount="3"
-        app:rowCount="3">
-
-        <Button
-            android:id="@+id/tile01"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@null"
-            android:onClick="tileClicked"
-            android:textColor="@color/colorAccent"
-            android:textSize="70sp"
-            app:layout_column="0"
-            app:layout_row="0"
-            tools:textColor="@color/colorPrimaryDark" />
-
-        <Button
-            android:id="@+id/tile02"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@null"
-            android:onClick="tileClicked"
-            android:textColor="@color/colorAccent"
-            android:textSize="70sp"
-            app:layout_column="1"
-            app:layout_row="0" />
-
-        <Button
-            android:id="@+id/tile03"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@null"
-            android:onClick="tileClicked"
-            android:textColor="@color/colorAccent"
-            android:textSize="70sp"
-            app:layout_column="2"
-            app:layout_row="0" />
-
-        <Button
-            android:id="@+id/tile04"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@null"
-            android:onClick="tileClicked"
-            android:textColor="@color/colorAccent"
-            android:textSize="70sp"
-            app:layout_column="0"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/tile05"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@null"
-            android:onClick="tileClicked"
-            android:textColor="@color/colorAccent"
-            android:textSize="70sp"
-            app:layout_column="1"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/tile06"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@null"
-            android:onClick="tileClicked"
-            android:textColor="@color/colorAccent"
-            android:textSize="70sp"
-            app:layout_column="2"
-            app:layout_row="1" />
-
-        <Button
-            android:id="@+id/tile07"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@null"
-            android:onClick="tileClicked"
-            android:textColor="@color/colorAccent"
-            android:textSize="70sp"
-            app:layout_column="0"
-            app:layout_row="2" />
-
-        <Button
-            android:id="@+id/tile08"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@null"
-            android:onClick="tileClicked"
-            android:textColor="@color/colorAccent"
-            android:textSize="70sp"
-            app:layout_column="1"
-            app:layout_row="2" />
-
-        <Button
-            android:id="@+id/tile09"
-            android:layout_width="100dp"
-            android:layout_height="100dp"
-            android:background="@null"
-            android:onClick="tileClicked"
-            android:textColor="@color/colorAccent"
-            android:textSize="70sp"
-            app:layout_column="2"
-            app:layout_row="2" />
-
-    </android.support.v7.widget.GridLayout>
+        android:gravity="center"
+        android:textColor="@color/colorAccent"
+        android:visibility="visible" />
 
     <TextView
         android:id="@+id/turn"
@@ -130,15 +161,5 @@
         android:text="Player X, you may start!"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="25sp" />
-
-    <TextView
-        android:id="@+id/message"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_gravity="center"
-        android:layout_weight="1"
-        android:gravity="center"
-        android:textColor="@color/colorAccent"
-        android:visibility="visible" />
 
 </LinearLayout>
