--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -158,7 +158,7 @@
         android:layout_gravity="center"
         android:layout_weight="1"
         android:gravity="center"
-        android:text="You may start!"
+        android:text="Player X, you may start!"
         android:textColor="@color/colorPrimaryDark"
         android:textSize="25sp" />
 
